--- a/frens.html
+++ b/frens.html
@@ -64,7 +64,9 @@
             <h2>Complete Tasks and Earn $RMFI Tokens! </h2><br>
             <h3>Here’s how it works:</h3><br>
             <h4>1- Click the link to get started @ https://t.me/JoinTheSliders</h4><br>
-            <h4>2- Complete by following individual directions for tasks here @ https://t.me/+xW3j-CyT5vk0NDdh</h4><br>
+            <h4>1- OR </h4><br>
+            <h4>1- Get right to it with our Bot https://t.me/RMFI_Triple_Bot</h4><br>
+            <h4>2- Get more by following individual directions for tasks here @ https://t.me/+xW3j-CyT5vk0NDdh</h4><br>
             <h3>After Completing Any Task:</h3><br>
             <h4>3- Proceed to contacting any $RMFI Token Ambassador or Distribution Officer by simply messaging the required information to the proper $RMFI authority!</h4><br>
             <h5>Lead$Ambassador: https://t.me/Ambassadorben</h5>
