--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <img src="./assets/images/to-join-community2-removebg-preview.png " alt="" width="105px">
             <span class="select-none">Buy A VMNFT</span>
         </a>
-        <a href="https://t.me/Ambassadorben" class="button b-r">
+        <a href="https://t.me/+rs7jdzXFEBJkZjBh" class="button b-r">
             <img src="./assets/images/to-qualify2-removebg-preview.png" alt="" width="105px">
             <span class="select-none">VMNFT Claim</span>
         </a>
@@ -104,13 +104,10 @@
             <img src="./assets/images/claim-rewards-removebg-preview.png" alt="" width="105px">
             <span class="select-none">Make VMNFT?</span>
         </a>
+       
         <a href="https://t.me/+xW3j-CyT5vk0NDdh" class="button">
             <img src="./assets/images/claim-rewards-removebg-preview.png" alt="" width="105px">
-            <span class="select-none">$RMFI IdleMiner</span>
-        </a>
-        <a href="https://t.me/+xW3j-CyT5vk0NDdh" class="button">
-            <img src="./assets/images/claim-rewards-removebg-preview.png" alt="" width="105px">
-            <span class="select-none">Play2Earn $RMFI</span>
+            <span class="select-none">$RMFI NINJA</span>
         </a>
     </div>
 </div>
